 - Released 16 more PICs of 18f47j13 and 18f47j53 family.
 - Released 6 more PICs of 18f87k22 family.
 - Released 4 more PICs of 18f1824/28 family.
 - Released 4 more PICs of 18f1946/47 family.
 - Added (untested) device files for 16f1825/29 family.
 - Added aliases for first of multiple SPI and I2C modules to be able to use
   current SPI and I2C libraries with the first SPI and I2C module.

externals:
 - added library for the Analog Devices AD9833 Direct Digital Synthesis Chip (external/dds)
 - sd card library changed to read/write with byte procedures instead of double byte procedures.
 - pata_hard_disk added single byte read/write
 - pata_hard_disk,and sd_card lib now has write_to_sector_address procedures
 - pata_hard_disk,sd card speed increase for fast reads, also added extra_speed constant

peripherals:
 - ADC: support for 18F2420/2520/4420/4520 (datasheet 39631)
        support for 18F242/252/442/452 (datasheet 39564)

jal extension:
 -

filesystem:
 - FAT32 promoted to non-beta with some API changes
 - FAT32 read_sector_address() procedure for faster read/write
 - FAT32 can now read or write to any sector even if the file is fragmented

samples:
 - Released blink samples for new or newly released device files (see above).
 - Added I2C master hardware and software samples for 18f25k22
 - New fat32 samples showing usage changes/additons.
 - New pata_hard_disk showing usage changes/additons. See tutorials.
 - New sd card samples showing usage changes/additons. See tutorials.
 - Sample of temperature controlled PC case fan, with 12HV615 (12V DC).

compiler:
 -


jallib-0.6.0:
------------

Released 2010-09-06

Changes since 0.5.0

device files:
 - Based on MPLAB 8.53.
 - Added many device files, of which more than 100 tested and released.
 - Added aliases for the first of two USARTs to be able to use the current
   hardware serial libs for the first of these USARTs.
 - Revised memory specifications for _pic_accum and _pic_isr_w for some PICs.