@@ -15,6 +15,10 @@ device files:
  - Added (untested) device files for 16f1825/29 family.
  - Added aliases for first of multiple SPI and I2C modules to be able to use
    current SPI and I2C libraries with the first SPI and I2C module.
+ - Replaced enumerated ADCS fields in ADCONx register of extended midrange
+   by a multibit (bit*3) field.
+ - Added a pseudo-variable ADCON0_ADCS for PICs which have their ADCS bits
+   scattered over ADCON0 and ADCON1 registers.
 
 externals:
  - added library for the Analog Devices AD9833 Direct Digital Synthesis Chip (external/dds)
